_build/html/reports/coding-problems.log
Traceback (most recent call last):
  File "c:\users\piete\appdata\local\programs\python\python37\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\piete\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\piete\appdata\local\programs\python\python37\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\piete\appdata\local\programs\python\python37\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\piete\appdata\local\programs\python\python37\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\piete\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\piete\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "c:\users\piete\appdata\local\programs\python\python37\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def yes_or_no(x):
  if x == "A":
    return "yes"
  else:
    return "no"
  else:
    return "maybe"
------------------

[1;36m  File [1;32m"C:\Users\piete\AppData\Local\Temp\ipykernel_4024\1560054318.py"[1;36m, line [1;32m6[0m
[1;33m    else:[0m
[1;37m       ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (1560054318.py, line 6)

